syntax = "proto3";
package login_register;
option go_package = "./pb";

message RegisterReq{
}
message RegisterRes{
}


message LoginReq{
}
message LoginReps{
}

message GetInfoReq{
}
message GetInfoReps{

}
service User{
  rpc Register(RegisterReq) returns(RegisterRes);
  rpc Login(LoginReq) returns(LoginReps);
  rpc GetInfoByPnum(GetInfoReq) returns(GetInfoReps);
}
